[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/45.png" type="Texture" id=1]
[ext_resource path="res://Script/fundos.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="51" type="Sprite" parent="."]
position = Vector2( 641.5, 361 )
scale = Vector2( 0.264779, 0.267549 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = 429.0
margin_top = 212.0
margin_right = 896.0
margin_bottom = 292.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
show_behind_parent = true
margin_left = 434.0
margin_top = 311.0
margin_right = 895.0
margin_bottom = 396.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
show_behind_parent = true
margin_left = 434.0
margin_top = 408.0
margin_right = 893.0
margin_bottom = 498.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
show_behind_parent = true
margin_left = 434.0
margin_top = 509.0
margin_right = 900.0
margin_bottom = 588.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
show_behind_parent = true
margin_left = 578.0
margin_top = 617.0
margin_right = 759.0
margin_bottom = 691.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
